--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,22 +1,14 @@
 <h1>About</h1>
-<p>Repository: <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p>
-<p>Github Pages: <a href="https://mde.tw/cmstemplate">https://mde.tw/cmstemplate</a></p>
-<p>利用 cmstemplate 建立以 CMSiMDE 作為子模組的動態與靜態網站方法為:</p>
-<ol>
-<li>登入 Github 帳號</li>
-<li>將瀏覽器指向 <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></li>
-<li>利用 <span style="background-color: #00ff00;">Use this template</span> 按鈕建立倉儲</li>
-</ol>
-<p>clone 帶有 CMSiMDE 的指令:</p>
-<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">git clone --recurse-submodules URL</pre>
-<p>上述 URL 即為希望將倉儲資料取下進行改版的 Github 倉儲網路統一資源位置, 也就是 Github 倉儲網址.</p>
-<p>每一個以 cmstemplate 為 template 的倉儲, 其根目錄都帶有:</p>
-<ol>
-<li><span style="background-color: #ffff99;">init.py</span> - 其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號.</li>
-<li><span style="background-color: #ffff99;">http-server.py</span> - 執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁.</li>
-<li><span style="background-color: #ffff99;">cms.bat</span> - 讓使用者執行動態網站用的批次檔案.</li>
-<li><span style="background-color: #ffff99;">acp.bat</span> - 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令.</li>
-</ol><h1>CMSiMDE</h1>
+<p>專題題目 : </p>
+<p>組員 : </p>
+<p>張欽堯 40823114 <a href="https://github.com/40823114/cd2021">repo</a> <a href="https://40823114.github.io/cd2021/content/index.html">site</a></p>
+<p>粘晁維 40823121 <a href="https://github.com/40823121/cd2021">repo</a> <a href="https://40823121.github.io/cd2021/content/index.html">site</a></p>
+<p>陳佑杰 40823127 <a href="https://github.com/40823127/cd2021">repo</a> <a href="https://40823127.github.io/cd2021/content/index.html">site</a></p>
+<p>林澤叡 40823135 <a href="https://github.com/40823135/cd2021">repo</a> <a href="https://40823135.github.io/cd2021/content/index.html">site</a></p>
+<p>廖韋博 40823142 <a href="https://github.com/40823142/cd2021">repo</a> <a href="https://40823142.github.io/cd2021/content/index.html">site</a></p>
+<p>柯晉瑚 40823144 <a href="https://github.com/40823144/cd2021">repo</a> <a href="https://40823144.github.io/cd2021/content/index.html">site</a></p>
+<p>蕭宏翔 40823146 <a href="https://github.com/40823146/cd2021">repo</a> <a href="https://40823146.github.io/cd2021/content/index.html">site</a></p>
+<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p><h1>CMSiMDE</h1>
 <p>CMSiMDE (<a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a>) 是一套以 Python 與 Flask 框架編寫的網際內容管理系統,</p>
 <p>使用 CMSiMDE 建議使用者安裝 flask flask_cors bs4 lxml pelican markdown leo 等模組. 其中的 flask flask_cors bs4 lxml pelican markdown為啟動 CMSiMDE 的必要模組, 而 leo 則是 CMSMDE 開發者所使用的大綱管理工具, 可以用於與 CMSiMDE 整合的 Pelican blog 及 Reveal.js 網際簡報編輯之用.</p>
 <h2>基本操作</h2>
