--- a/content/About.html
+++ b/content/About.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='CMSiMDE.html'>CMSiMDE</a><ul class='dropdown'><li class='has-children'><a href='基本操作.html'>基本操作</a><ul class='dropdown'><li><a href='客製化.html'>客製化</a><li><a href='編輯網頁內容.html'>編輯網頁內容</a><li><a href='上傳與引用檔案.html'>上傳與引用檔案</a><li><a href='上傳與引用圖片.html'>上傳與引用圖片</a><li><a href='嵌入程式碼.html'>嵌入程式碼</a><li><a href='嵌入影片檔.html'>嵌入影片檔</a><li><a href='檢視 STL.html'>檢視 STL</a></li></ul><li><a href='Gitlab 同步.html'>Gitlab 同步</a><li><a href='Heroku 部署.html'>Heroku 部署</a><li><a href='Fossil SCM.html'>Fossil SCM</a></li></ul><li><a href='建立網頁.html'>建立網頁</a><li class='has-children'><a href='注意事項.html'>注意事項</a><ul class='dropdown'><li><a href='標題選擇.html'>標題選擇</a><li><a href='靜態網頁 404.html'>靜態網頁 404</a><li><a href='動態網站錯誤.html'>動態網站錯誤</a></li></ul><li class='has-children'><a href='延伸開發.html'>延伸開發</a><ul class='dropdown'><li class='has-children'><a href='已知問題.html'>已知問題</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='MathJax.html'>MathJax</a><li><a href='html 分頁.html'>html 分頁</a><li><a href='template.html'>template</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>About</h1>
 <p>專題題目 : </p>
 <p>組員 : </p>
 <p>張欽堯 40823114 <a href="https://github.com/40823114/cd2021">repo</a> <a href="https://40823114.github.io/cd2021/content/index.html">site</a></p>
@@ -144,7 +144,8 @@ img.add_border {
 <p>廖韋博 40823142 <a href="https://github.com/40823142/cd2021">repo</a> <a href="https://40823142.github.io/cd2021/content/index.html">site</a></p>
 <p>柯晉瑚 40823144 <a href="https://github.com/40823144/cd2021">repo</a> <a href="https://40823144.github.io/cd2021/content/index.html">site</a></p>
 <p>蕭宏翔 40823146 <a href="https://github.com/40823146/cd2021">repo</a> <a href="https://40823146.github.io/cd2021/content/index.html">site</a></p>
-<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p><br /> <a href='CMSiMDE.html'>Next</a> >> CMSiMDE</div>
+<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p>
+<br /> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
