--- a/content/發球器.html
+++ b/content/發球器.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='CMSiMDE.html'>CMSiMDE</a><ul class='dropdown'><li class='has-children'><a href='基本操作.html'>基本操作</a><ul class='dropdown'><li><a href='客製化.html'>客製化</a><li><a href='編輯網頁內容.html'>編輯網頁內容</a><li><a href='上傳與引用檔案.html'>上傳與引用檔案</a><li><a href='上傳與引用圖片.html'>上傳與引用圖片</a><li><a href='嵌入程式碼.html'>嵌入程式碼</a><li><a href='嵌入影片檔.html'>嵌入影片檔</a><li><a href='檢視 STL.html'>檢視 STL</a></li></ul><li><a href='Gitlab 同步.html'>Gitlab 同步</a><li><a href='Heroku 部署.html'>Heroku 部署</a><li><a href='Fossil SCM.html'>Fossil SCM</a></li></ul><li><a href='建立網頁.html'>建立網頁</a><li class='has-children'><a href='注意事項.html'>注意事項</a><ul class='dropdown'><li><a href='標題選擇.html'>標題選擇</a><li><a href='靜態網頁 404.html'>靜態網頁 404</a><li><a href='動態網站錯誤.html'>動態網站錯誤</a></li></ul><li class='has-children'><a href='延伸開發.html'>延伸開發</a><ul class='dropdown'><li class='has-children'><a href='已知問題.html'>已知問題</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='MathJax.html'>MathJax</a><li><a href='html 分頁.html'>html 分頁</a><li><a href='template.html'>template</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Gitlab 同步 << <a href='Gitlab 同步.html'>Previous</a> <a href='Fossil SCM.html'>Next</a> >> Fossil SCM<br /><h1>Heroku 部署</h1>
-<p>與 Heroku 部署有關資訊請參考: <a href="https://mde.tw/cp2020/content/Heroku.html">https://mde.tw/cp2020/content/Heroku.html</a></p><br />Gitlab 同步 << <a href='Gitlab 同步.html'>Previous</a> <a href='Fossil SCM.html'>Next</a> >> Fossil SCM</div>
+    <div id="tipue_search_content">旋轉木馬 << <a href='旋轉木馬.html'>Previous</a> <a href='四腳獸.html'>Next</a> >> 四腳獸<br /><h1>發球器</h1>
+<p><span>粘晁維 40823121</span></p>
+<p><span>林澤叡 40823135 </span></p>
+<br />旋轉木馬 << <a href='旋轉木馬.html'>Previous</a> <a href='四腳獸.html'>Next</a> >> 四腳獸</div>
         
     <!-- footer -->
       <div class="container">
