--- a/content/電風扇.html
+++ b/content/電風扇.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='CMSiMDE.html'>CMSiMDE</a><ul class='dropdown'><li class='has-children'><a href='基本操作.html'>基本操作</a><ul class='dropdown'><li><a href='客製化.html'>客製化</a><li><a href='編輯網頁內容.html'>編輯網頁內容</a><li><a href='上傳與引用檔案.html'>上傳與引用檔案</a><li><a href='上傳與引用圖片.html'>上傳與引用圖片</a><li><a href='嵌入程式碼.html'>嵌入程式碼</a><li><a href='嵌入影片檔.html'>嵌入影片檔</a><li><a href='檢視 STL.html'>檢視 STL</a></li></ul><li><a href='Gitlab 同步.html'>Gitlab 同步</a><li><a href='Heroku 部署.html'>Heroku 部署</a><li><a href='Fossil SCM.html'>Fossil SCM</a></li></ul><li><a href='建立網頁.html'>建立網頁</a><li class='has-children'><a href='注意事項.html'>注意事項</a><ul class='dropdown'><li><a href='標題選擇.html'>標題選擇</a><li><a href='靜態網頁 404.html'>靜態網頁 404</a><li><a href='動態網站錯誤.html'>動態網站錯誤</a></li></ul><li class='has-children'><a href='延伸開發.html'>延伸開發</a><ul class='dropdown'><li class='has-children'><a href='已知問題.html'>已知問題</a><ul class='dropdown'><li><a href='IPv6.html'>IPv6</a><li><a href='MathJax.html'>MathJax</a><li><a href='html 分頁.html'>html 分頁</a><li><a href='template.html'>template</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,11 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">基本操作 << <a href='基本操作.html'>Previous</a> <a href='編輯網頁內容.html'>Next</a> >> 編輯網頁內容<br /><h1>客製化</h1>
-<p>假如利用 <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a> 作為 template 所建立的 Github Pages 網站, 倉儲根目錄中的 cms.bat 可以在執行動態網站系統之後, 利用 pipe 讓 cms.bat 同時開啟 Firefox <a>https://localhost:9443</a></p>
-<p>修改後的 cms.bat 如下:</p>
-<pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">python cmsimde/wsgi.py 1&gt; nul | "C:\Program Files (x86)\Mozilla Firefox\firefox" https://localhost:9443</pre>
-<p>前面 python cmsimde/wsgi.py 加上 1&gt; nul 的目的是因為 pipe 執行時會將前面指令執行結果轉為隨後執行指令的輸入, 而 1&gt; nul 則會將標準輸出的任何資料移除, 任何輸出不會影響 Firefox 執行.</p><br />基本操作 << <a href='基本操作.html'>Previous</a> <a href='編輯網頁內容.html'>Next</a> >> 編輯網頁內容</div>
+    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器<br /><h1>電風扇</h1>
+<p><span>張欽堯 40823114</span></p>
+<p><span>蕭宏翔 40823146</span></p>
+<br />stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器</div>
         
     <!-- footer -->
       <div class="container">
