--- a/config/content.htm
+++ b/config/content.htm
@@ -11,9 +11,11 @@
 <p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p>
 <h1>stage1</h1>
 <h2>電風扇</h2>
-<p><span>張欽堯 40823114</span></p>
-<p><span>蕭宏翔 40823146</span></p>
-<h2>排球扣球練習器</h2>
+<p><span>張欽堯 40823114 : 繪製零件圖/修改零件設計/網站維護/報告</span></p>
+<p><span>蕭宏翔 40823146 : coppeliasim模擬/資料查找/網站維護/報告</span></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kjx-otNs8v0" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823114.github.io/stage1-ag16/content/index.html">小組SITE</a></p><h2>排球扣球練習器</h2>
 <p><span>粘晁維 40823121</span></p>
 <p><span>林澤叡 40823135 </span></p>
 <h2>四驅車</h2>
