--- a/content/電風扇.html
+++ b/content/電風扇.html
@@ -135,9 +135,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器<br /><h1>電風扇</h1>
-<p><span>張欽堯 40823114</span></p>
-<p><span>蕭宏翔 40823146</span></p>
-<br />stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器</div>
+<p><span>張欽堯 40823114 : 繪製零件圖/修改零件設計/網站維護/報告</span></p>
+<p><span>蕭宏翔 40823146 : coppeliasim模擬/資料查找/網站維護/報告</span></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kjx-otNs8v0" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823114.github.io/stage1-ag16/content/index.html">小組SITE</a></p><br />stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器</div>
         
     <!-- footer -->
       <div class="container">
