--- a/config/content.htm
+++ b/config/content.htm
@@ -16,9 +16,11 @@
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kjx-otNs8v0" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823114.github.io/stage1-ag16/content/index.html">小組SITE</a></p><h2>排球扣球練習器</h2>
-<p><span>粘晁維 40823121</span></p>
-<p><span>林澤叡 40823135 </span></p>
-<h2>四驅車</h2>
+<p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
+<p><span>林澤叡 40823135 : 專題發想/繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IT0yptAfJ6Q" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823121.github.io/stage1-ag18/content/index.html">小組SITE</a></p><h2>四驅車</h2>
 <p><span>陳佑杰 40823127</span></p>
 <p><span>韋誠昌 40823148</span></p>
 <h2>纜車</h2>
