--- a/content/排球扣球練習器.html
+++ b/content/排球扣球練習器.html
@@ -135,9 +135,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車<br /><h1>排球扣球練習器</h1>
-<p><span>粘晁維 40823121</span></p>
-<p><span>林澤叡 40823135 </span></p>
-<br />電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車</div>
+<p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
+<p><span>林澤叡 40823135 : 專題發想/繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IT0yptAfJ6Q" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823121.github.io/stage1-ag18/content/index.html">小組SITE</a></p><br />電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車</div>
         
     <!-- footer -->
       <div class="container">
