--- a/content/四驅車.html
+++ b/content/四驅車.html
@@ -137,7 +137,9 @@ img.add_border {
     <div id="tipue_search_content">排球扣球練習器 << <a href='排球扣球練習器.html'>Previous</a> <a href='纜車.html'>Next</a> >> 纜車<br /><h1>四驅車</h1>
 <p><span>陳佑杰 40823127</span></p>
 <p><span>韋誠昌 40823148</span></p>
-<br />排球扣球練習器 << <a href='排球扣球練習器.html'>Previous</a> <a href='纜車.html'>Next</a> >> 纜車</div>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3KHE4jRWbAw" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823148.github.io/stage1-ag20/content/index.html">小組SITE</a></p><br />排球扣球練習器 << <a href='排球扣球練習器.html'>Previous</a> <a href='纜車.html'>Next</a> >> 纜車</div>
         
     <!-- footer -->
       <div class="container">
