--- a/content/纜車.html
+++ b/content/纜車.html
@@ -137,8 +137,8 @@ img.add_border {
     <div id="tipue_search_content">四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>纜車</h1>
 <p><span>廖韋博 40823142</span></p>
 <p><span>柯晉瑚 40823144</span></p>
-<p></p>
-<br />四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<p>成果影片 : </p>
+<p><a href="https://40823144.github.io/stage1-ag17/content/index.html">小組SITE</a></p><br />四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
         
     <!-- footer -->
       <div class="container">
