--- a/content/發球器.html
+++ b/content/發球器.html
@@ -135,9 +135,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">旋轉木馬 << <a href='旋轉木馬.html'>Previous</a> <a href='四腳獸.html'>Next</a> >> 四腳獸<br /><h1>發球器</h1>
-<p><span>粘晁維 40823121</span></p>
-<p><span>林澤叡 40823135 </span></p>
-<br />旋轉木馬 << <a href='旋轉木馬.html'>Previous</a> <a href='四腳獸.html'>Next</a> >> 四腳獸</div>
+<p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題解決/報告</span></p>
+<p><span>林澤叡 40823135 : 零件圖設計.修改/資料查找/報告</span></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0bRXnBbPWHo" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823106.github.io/stage2-ag5/content/index.html">小組SITE</a></p><br />旋轉木馬 << <a href='旋轉木馬.html'>Previous</a> <a href='四腳獸.html'>Next</a> >> 四腳獸</div>
         
     <!-- footer -->
       <div class="container">
