--- a/content/四腳獸.html
+++ b/content/四腳獸.html
@@ -139,7 +139,9 @@ img.add_border {
 <p><span>韋誠昌 40823148</span></p>
 <p><span>廖韋博 40823142</span></p>
 <p><span>柯晉瑚 40823144</span></p>
-<p></p><br />發球器 << <a href='發球器.html'>Previous</a> </div>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/jNLPmJR2iNI" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p><br />發球器 << <a href='發球器.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
