--- a/config/content.htm
+++ b/config/content.htm
@@ -33,7 +33,9 @@
 <h2>旋轉木馬</h2>
 <p><span>張欽堯 40823114</span></p>
 <p><span>蕭宏翔 40823146</span></p>
-<h2>發球器</h2>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/cSTjKB_MVNQ" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823140.github.io/stage2-ag9/content/index.html">小組SITE</a></p><h2>發球器</h2>
 <p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題解決/報告</span></p>
 <p><span>林澤叡 40823135 : 零件圖設計.修改/資料查找/報告</span></p>
 <p><span>成果影片 : </span></p>
@@ -43,4 +45,6 @@
 <p><span>韋誠昌 40823148</span></p>
 <p><span>廖韋博 40823142</span></p>
 <p><span>柯晉瑚 40823144</span></p>
-<p></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/jNLPmJR2iNI" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p>
