--- a/content/旋轉木馬.html
+++ b/content/旋轉木馬.html
@@ -137,7 +137,9 @@ img.add_border {
     <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='發球器.html'>Next</a> >> 發球器<br /><h1>旋轉木馬</h1>
 <p><span>張欽堯 40823114</span></p>
 <p><span>蕭宏翔 40823146</span></p>
-<br />stage2 << <a href='stage2.html'>Previous</a> <a href='發球器.html'>Next</a> >> 發球器</div>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/cSTjKB_MVNQ" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823140.github.io/stage2-ag9/content/index.html">小組SITE</a></p><br />stage2 << <a href='stage2.html'>Previous</a> <a href='發球器.html'>Next</a> >> 發球器</div>
         
     <!-- footer -->
       <div class="container">
