--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -45,4 +45,6 @@
 <p><span>韋誠昌 40823148</span></p>
 <p><span>廖韋博 40823142</span></p>
 <p><span>柯晉瑚 40823144</span></p>
-<p></p>
+<p><span>成果影片 : </span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/jNLPmJR2iNI" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p>
