--- a/content/About.html
+++ b/content/About.html
@@ -135,7 +135,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='stage1.html'>Next</a> >> stage1<br /><h1>About</h1>
-<p>專題題目 : </p>
+<p><img alt="" height="230" src="./../images/四腳獸.PNG" width="310"/></p>
+<p>專題題目 : 仿生四腳獸</p>
 <p>組員 : </p>
 <p>張欽堯 40823114 <a href="https://github.com/40823114/cd2021">repo</a> <a href="https://40823114.github.io/cd2021/content/index.html">site</a></p>
 <p>粘晁維 40823121 <a href="https://github.com/40823121/cd2021">repo</a> <a href="https://40823121.github.io/cd2021/content/index.html">site</a></p>
@@ -144,8 +145,7 @@ img.add_border {
 <p>廖韋博 40823142 <a href="https://github.com/40823142/cd2021">repo</a> <a href="https://40823142.github.io/cd2021/content/index.html">site</a></p>
 <p>柯晉瑚 40823144 <a href="https://github.com/40823144/cd2021">repo</a> <a href="https://40823144.github.io/cd2021/content/index.html">site</a></p>
 <p>蕭宏翔 40823146 <a href="https://github.com/40823146/cd2021">repo</a> <a href="https://40823146.github.io/cd2021/content/index.html">site</a></p>
-<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p>
-<br /> <a href='stage1.html'>Next</a> >> stage1</div>
+<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p><br /> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
