--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,6 @@
 <h1>About</h1>
-<p>專題題目 : </p>
+<p><img alt="" height="230" src="/images/四腳獸.PNG" width="310"/></p>
+<p>專題題目 : 仿生四腳獸</p>
 <p>組員 : </p>
 <p>張欽堯 40823114 <a href="https://github.com/40823114/cd2021">repo</a> <a href="https://40823114.github.io/cd2021/content/index.html">site</a></p>
 <p>粘晁維 40823121 <a href="https://github.com/40823121/cd2021">repo</a> <a href="https://40823121.github.io/cd2021/content/index.html">site</a></p>
@@ -8,8 +9,7 @@
 <p>廖韋博 40823142 <a href="https://github.com/40823142/cd2021">repo</a> <a href="https://40823142.github.io/cd2021/content/index.html">site</a></p>
 <p>柯晉瑚 40823144 <a href="https://github.com/40823144/cd2021">repo</a> <a href="https://40823144.github.io/cd2021/content/index.html">site</a></p>
 <p>蕭宏翔 40823146 <a href="https://github.com/40823146/cd2021">repo</a> <a href="https://40823146.github.io/cd2021/content/index.html">site</a></p>
-<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p>
-<h1>stage1</h1>
+<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p><h1>stage1</h1>
 <h2>電風扇</h2>
 <p><span>張欽堯 40823114 : 繪製零件圖/修改零件設計/網站維護/報告</span></p>
 <p><span>蕭宏翔 40823146 : coppeliasim模擬/資料查找/網站維護/報告</span></p>
@@ -17,22 +17,22 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kjx-otNs8v0" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823114.github.io/stage1-ag16/content/index.html">小組SITE</a></p><h2>排球扣球練習器</h2>
 <p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
-<p><span>林澤叡 40823135 : 專題發想/繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
+<p><span>林澤叡 40823135 : 繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IT0yptAfJ6Q" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823121.github.io/stage1-ag18/content/index.html">小組SITE</a></p><h2>四驅車</h2>
-<p><span>陳佑杰 40823127</span></p>
-<p><span>韋誠昌 40823148</span></p>
+<p><span>陳佑杰 40823127 : 零件圖繪製/機構設計及修正/coppeliasim模擬/報告</span></p>
+<p><span>韋誠昌 40823148 : 零件圖繪製/機構設計及修正/coppeliasim模擬/報告</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3KHE4jRWbAw" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823148.github.io/stage1-ag20/content/index.html">小組SITE</a></p><h2>纜車</h2>
-<p><span>廖韋博 40823142</span></p>
-<p><span>柯晉瑚 40823144</span></p>
+<p><span>廖韋博 40823142 : 零件圖繪製/零件設計及修改/專題資料查找/報告</span></p>
+<p><span>柯晉瑚 40823144 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
 <p>成果影片 : </p>
 <p><a href="https://40823144.github.io/stage1-ag17/content/index.html">小組SITE</a></p><h1>stage2</h1>
 <h2>旋轉木馬</h2>
-<p><span>張欽堯 40823114</span></p>
-<p><span>蕭宏翔 40823146</span></p>
+<p><span>張欽堯 40823114 : 繪製零件圖/修改零件設計</span></p>
+<p><span>蕭宏翔 40823146 : coppeliasim模擬/專題資料查找</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/cSTjKB_MVNQ" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823140.github.io/stage2-ag9/content/index.html">小組SITE</a></p><h2>發球器</h2>
@@ -41,10 +41,10 @@
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/0bRXnBbPWHo" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823106.github.io/stage2-ag5/content/index.html">小組SITE</a></p><h2>四腳獸</h2>
-<p><span>陳佑杰 40823127</span></p>
-<p><span>韋誠昌 40823148</span></p>
-<p><span>廖韋博 40823142</span></p>
-<p><span>柯晉瑚 40823144</span></p>
+<p><span>陳佑杰 40823127 : 零件圖繪製/機構設計及修正/coppeliasim模擬</span></p>
+<p><span>韋誠昌 40823148 : 零件圖繪製/機構設計及修正/coppeliasim模擬</span></p>
+<p><span>廖韋博 40823142 : coppeliasim模擬/專題資料查找/報告</span></p>
+<p><span>柯晉瑚 40823144 : 網站維護/模擬問題資料查找/報告</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/jNLPmJR2iNI" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p>
