--- a/content/About.html
+++ b/content/About.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,7 +145,8 @@ img.add_border {
 <p>廖韋博 40823142 <a href="https://github.com/40823142/cd2021">repo</a> <a href="https://40823142.github.io/cd2021/content/index.html">site</a></p>
 <p>柯晉瑚 40823144 <a href="https://github.com/40823144/cd2021">repo</a> <a href="https://40823144.github.io/cd2021/content/index.html">site</a></p>
 <p>蕭宏翔 40823146 <a href="https://github.com/40823146/cd2021">repo</a> <a href="https://40823146.github.io/cd2021/content/index.html">site</a></p>
-<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p><br /> <a href='stage1.html'>Next</a> >> stage1</div>
+<p>韋誠昌 40823148 <a href="https://github.com/40823148/cd2021">repo</a> <a href="https://40823148.github.io/cd2021/content/index.html">site</a></p>
+<br /> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
       <div class="container">
