--- a/content/W16-17.html
+++ b/content/W16-17.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">纜車 << <a href='纜車.html'>Previous</a> <a href='旋轉木馬.html'>Next</a> >> 旋轉木馬<br /><h1>stage2</h1>
-<br />纜車 << <a href='纜車.html'>Previous</a> <a href='旋轉木馬.html'>Next</a> >> 旋轉木馬</div>
+    <div id="tipue_search_content">W14-15 << <a href='W14-15.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>W16-17</h1>
+<br />W14-15 << <a href='W14-15.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
         
     <!-- footer -->
       <div class="container">
