--- a/content/stage3.html
+++ b/content/stage3.html
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">纜車 << <a href='纜車.html'>Previous</a> <a href='旋轉木馬.html'>Next</a> >> 旋轉木馬<br /><h1>stage2</h1>
-<br />纜車 << <a href='纜車.html'>Previous</a> <a href='旋轉木馬.html'>Next</a> >> 旋轉木馬</div>
+    <div id="tipue_search_content">四腳獸 << <a href='四腳獸.html'>Previous</a> <a href='W10-11.html'>Next</a> >> W10-11<br /><h1>stage3</h1>
+<br />四腳獸 << <a href='四腳獸.html'>Previous</a> <a href='W10-11.html'>Next</a> >> W10-11</div>
         
     <!-- footer -->
       <div class="container">
