--- a/content/四腳獸.html
+++ b/content/四腳獸.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,14 +134,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">發球器 << <a href='發球器.html'>Previous</a> <br /><h1>四腳獸</h1>
-<p><span>陳佑杰 40823127</span></p>
-<p><span>韋誠昌 40823148</span></p>
-<p><span>廖韋博 40823142</span></p>
-<p><span>柯晉瑚 40823144</span></p>
+    <div id="tipue_search_content">發球器 << <a href='發球器.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3<br /><h1>四腳獸</h1>
+<p><span>陳佑杰 40823127 : 零件圖繪製/機構設計及修正/coppeliasim模擬</span></p>
+<p><span>韋誠昌 40823148 : 零件圖繪製/機構設計及修正/coppeliasim模擬</span></p>
+<p><span>廖韋博 40823142 : coppeliasim模擬/專題資料查找/報告</span></p>
+<p><span>柯晉瑚 40823144 : 網站維護/模擬問題資料查找/報告</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/jNLPmJR2iNI" title="YouTube video player" width="560"></iframe></p>
-<p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p><br />發球器 << <a href='發球器.html'>Previous</a> </div>
+<p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p>
+<br />發球器 << <a href='發球器.html'>Previous</a> <a href='stage3.html'>Next</a> >> stage3</div>
         
     <!-- footer -->
       <div class="container">
