--- a/content/排球扣球練習器.html
+++ b/content/排球扣球練習器.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,10 +136,11 @@ img.add_border {
         </header>
     <div id="tipue_search_content">電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車<br /><h1>排球扣球練習器</h1>
 <p><span>粘晁維 40823121 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
-<p><span>林澤叡 40823135 : 專題發想/繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
+<p><span>林澤叡 40823135 : 繪製零件圖/修改零件設計/專題資料查找/網站維護/報告</span></p>
 <p><span>成果影片 : </span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/IT0yptAfJ6Q" title="YouTube video player" width="560"></iframe></p>
-<p><a href="https://40823121.github.io/stage1-ag18/content/index.html">小組SITE</a></p><br />電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車</div>
+<p><a href="https://40823121.github.io/stage1-ag18/content/index.html">小組SITE</a></p>
+<br />電風扇 << <a href='電風扇.html'>Previous</a> <a href='四驅車.html'>Next</a> >> 四驅車</div>
         
     <!-- footer -->
       <div class="container">
