--- a/content/纜車.html
+++ b/content/纜車.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,10 +135,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2<br /><h1>纜車</h1>
-<p><span>廖韋博 40823142</span></p>
-<p><span>柯晉瑚 40823144</span></p>
+<p><span>廖韋博 40823142 : 零件圖繪製/零件設計及修改/專題資料查找/報告</span></p>
+<p><span>柯晉瑚 40823144 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
 <p>成果影片 : </p>
-<p><a href="https://40823144.github.io/stage1-ag17/content/index.html">小組SITE</a></p><br />四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<p><a href="https://40823144.github.io/stage1-ag17/content/index.html">小組SITE</a></p>
+<br />四驅車 << <a href='四驅車.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
         
     <!-- footer -->
       <div class="container">
