--- a/config/content.htm
+++ b/config/content.htm
@@ -33,6 +33,7 @@
 <p><span>廖韋博 40823142 : 零件圖繪製/零件設計及修改/專題資料查找/報告</span></p>
 <p><span>柯晉瑚 40823144 : coppeliasim模擬/模擬問題資料查找/網站維護/報告</span></p>
 <p>成果影片 : </p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5Gw_04HwBFs" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://40823144.github.io/stage1-ag17/content/index.html">小組SITE</a></p>
 <h1>stage2</h1>
 <h2>旋轉木馬</h2>
@@ -57,7 +58,12 @@
 <p><a href="https://40823144.github.io/stage2-ag10/content/index.html">小組SITE</a></p>
 <h1>stage3</h1>
 <h2>W10-11</h2>
+<p>內部差速器模擬 : </p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_B6vZAINez4" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/o780Er3kKIo" title="YouTube video player" width="560"></iframe></p>
+<p></p>
 <h2>W12-13</h2>
 <h2>W14-15</h2>
 <h2>W16-17</h2>
 <h2>W18</h2>
+<h1>Problems&amp;Discussion</h1>
