--- a/content/Problems&Discussion.html
+++ b/content/Problems&Discussion.html
@@ -134,8 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='電風扇.html'>Next</a> >> 電風扇<br /><h1>stage1</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='電風扇.html'>Next</a> >> 電風扇</div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>Problems&Discussion</h1><br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
