--- a/content/W10-11.html
+++ b/content/W10-11.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='stage1.html'>stage1</a><ul class='dropdown'><li><a href='電風扇.html'>電風扇</a><li><a href='排球扣球練習器.html'>排球扣球練習器</a><li><a href='四驅車.html'>四驅車</a><li><a href='纜車.html'>纜車</a></li></ul><li class='has-children'><a href='stage2.html'>stage2</a><ul class='dropdown'><li><a href='旋轉木馬.html'>旋轉木馬</a><li><a href='發球器.html'>發球器</a><li><a href='四腳獸.html'>四腳獸</a></li></ul><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='W10-11.html'>W10-11</a><li><a href='W12-13.html'>W12-13</a><li><a href='W14-15.html'>W14-15</a><li><a href='W16-17.html'>W16-17</a><li><a href='W18.html'>W18</a></li></ul><li><a href='Problems&Discussion.html'>Problems&Discussion</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,6 +135,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage3 << <a href='stage3.html'>Previous</a> <a href='W12-13.html'>Next</a> >> W12-13<br /><h1>W10-11</h1>
+<p>內部差速器模擬 : </p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_B6vZAINez4" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/o780Er3kKIo" title="YouTube video player" width="560"></iframe></p>
+<p></p>
 <br />stage3 << <a href='stage3.html'>Previous</a> <a href='W12-13.html'>Next</a> >> W12-13</div>
         
     <!-- footer -->
