--- a/content/Problems&Discussion.html
+++ b/content/Problems&Discussion.html
@@ -134,7 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>Problems&Discussion</h1><br />W18 << <a href='W18.html'>Previous</a> </div>
+    <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>Problems&Discussion</h1>
+<p></p><br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
