--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -68,8 +68,4 @@
 <h2>W16-17</h2>
 <h2>W18</h2>
 <h1>Problems&amp;Discussion</h1>
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-<p>test1</p>
-=======
-<p></p>
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; 2287e0f10b3a6284ce9bca08db21acb64539e892
+<h1>test</h1>
