--- a/content/Problems&Discussion.html
+++ b/content/Problems&Discussion.html
@@ -135,11 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>Problems&Discussion</h1>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
-<p>test1</p>
-<p>=======</p>
-<p></p>
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 2287e0f10b3a6284ce9bca08db21acb64539e892</p><br />W18 << <a href='W18.html'>Previous</a> </div>
+<br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
