--- a/content/Task2.html
+++ b/content/Task2.html
@@ -2,7 +2,7 @@
         <head>
         <title>CMSiMDE</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -134,13 +134,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器<br /><h1>電風扇</h1>
-<p><span>張欽堯 40823114 : 繪製零件圖/修改零件設計/網站維護/報告</span></p>
-<p><span>蕭宏翔 40823146 : coppeliasim模擬/資料查找/網站維護/報告</span></p>
-<p><span>成果影片 : </span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kjx-otNs8v0" title="YouTube video player" width="560"></iframe></p>
-<p><a href="https://40823114.github.io/stage1-ag16/content/index.html">小組SITE</a></p>
-<br />stage1 << <a href='stage1.html'>Previous</a> <a href='排球扣球練習器.html'>Next</a> >> 排球扣球練習器</div>
+    <div id="tipue_search_content">Task << <a href='Task.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion<br /><h1>Task2</h1>
+<p><span>參考老師提供的bubbleRob_remoteAPI.ttt 檔案</span></p>
+<p><span><img alt="" height="430" src="./../images/task 1.png" width="800"/></span></p>
+<p><span>在自己Stage成品裡的Base裡新增程式</span></p>
+<p><span><img alt="" height="844" src="./../images/task 2.png" width="800"/></span></p>
+<p><span><img alt="" height="429" src="./../images/task 3.png" width="800"/></span></p>
+<p>老師提供的bubbleRob_remoteAPI.py 修改 想要轉動的軸的名稱和轉速 (黑色的部分是名稱 紅色的地方是轉速)</p>
+<p><img alt="" height="473" src="./../images/task 4.png" width="800"/></p>
+<p><span>完成操作影片：</span></p>
+<p><span></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPhdoOz42Mk" title="YouTube video player" width="560"></iframe></p><br />Task << <a href='Task.html'>Previous</a> <a href='Problems&Discussion.html'>Next</a> >> Problems&Discussion</div>
         
     <!-- footer -->
       <div class="container">
