--- a/config/content.htm
+++ b/config/content.htm
@@ -63,8 +63,11 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/o780Er3kKIo" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <h2>W12-13</h2>
+<p>四腳獸腳數修正設計圖</p>
+<p><img alt="" height="270" src="/images/六腳1.jpg" width="412"/></p>
 <p></p>
-<h2>W14-15</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3ptExMhNpG0" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5VoL5xO_CE4" title="YouTube video player" width="560"></iframe></p><h2>W14-15</h2>
 <h2>W16-17</h2>
 <h2>W18</h2>
 <h2>Task</h2>
