--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -63,10 +63,18 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/o780Er3kKIo" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <h2>W12-13</h2>
-<p></p>
-<h2>W14-15</h2>
+<p>四腳獸腳數修正設計圖</p><h2>W14-15</h2>
 <h2>W16-17</h2>
 <h2>W18</h2>
 <h2>Task</h2>
 <h3>Task2</h3>
-<p><span>參考老師提供的bubbleRob_remoteAPI.ttt 檔案</span></p><h1>Problems&amp;Discussion</h1>
+<p><span>參考老師提供的bubbleRob_remoteAPI.ttt 檔案</span></p>
+<p><span><img alt="" height="430" src="/images/task 1.png" width="800"/></span></p>
+<p><span>在自己Stage成品裡的Base裡新增程式</span></p>
+<p><span><img alt="" height="844" src="/images/task 2.png" width="800"/></span></p>
+<p><span><img alt="" height="429" src="/images/task 3.png" width="800"/></span></p>
+<p>老師提供的bubbleRob_remoteAPI.py 修改 想要轉動的軸的名稱和轉速 (黑色的部分是名稱 紅色的地方是轉速)</p>
+<p><img alt="" height="473" src="/images/task 4.png" width="800"/></p>
+<p><span>完成操作影片：</span></p>
+<p><span></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pPhdoOz42Mk" title="YouTube video player" width="560"></iframe></p><h1>Problems&amp;Discussion</h1>
