--- a/content/W12-13.html
+++ b/content/W12-13.html
@@ -135,8 +135,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W10-11 << <a href='W10-11.html'>Previous</a> <a href='W14-15.html'>Next</a> >> W14-15<br /><h1>W12-13</h1>
+<p>四腳獸腳數修正設計圖</p>
+<p><img alt="" height="270" src="./../images/六腳1.jpg" width="412"/></p>
 <p></p>
-<br />W10-11 << <a href='W10-11.html'>Previous</a> <a href='W14-15.html'>Next</a> >> W14-15</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3ptExMhNpG0" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5VoL5xO_CE4" title="YouTube video player" width="560"></iframe></p><br />W10-11 << <a href='W10-11.html'>Previous</a> <a href='W14-15.html'>Next</a> >> W14-15</div>
         
     <!-- footer -->
       <div class="container">
