--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -73,8 +73,7 @@
 <h2>W18</h2>
 <h2>Task</h2>
 <h3>Task1</h3>
-<p></p>
-<p><strong>第五版</strong>:將連結以老師常用的形式推出</p>
+<p><strong> </strong></p>
 <div>
 <div class="syntaxhighlighter py" id="highlighter_43678">
 <table border="0" cellpadding="0" cellspacing="0" style="width: 565px;">
@@ -137,7 +136,7 @@
 </tr>
 </tbody>
 </table>
-<p></p>
+<p>結果 : </p>
 </div>
 </div>
 <p><a href="https://github.com/40823131/stage3-ag1">stage3-ag1 repo</a> | <a href="https://40823131.github.io/stage3-ag1">stage3-ag1 site</a></p>
