--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -69,7 +69,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3ptExMhNpG0" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5VoL5xO_CE4" title="YouTube video player" width="560"></iframe></p>
 <h2>W14-15</h2>
-<h2>W16-17</h2>
+<p>由於先前的六腳獸行走即戰力還是不夠穩定，所以我們又修正了主體的設計，修正設計圖如下:</p>
+<p></p><h2>W16-17</h2>
 <h2>W18</h2>
 <h2>Task</h2>
 <h3>Task1</h3>
@@ -136,9 +137,11 @@
 </tr>
 </tbody>
 </table>
+<p></p>
+</div>
+</div>
+<p></p>
 <p>結果 : </p>
-</div>
-</div>
 <p><a href="https://github.com/40823131/stage3-ag1">stage3-ag1 repo</a> | <a href="https://40823131.github.io/stage3-ag1">stage3-ag1 site</a></p>
 <p><a href="https://github.com/40823131/cd2021">40823131 repo</a> | <a href="https://40823131.github.io/cd2021">40823131 site</a></p>
 <p><a href="https://github.com/a40823112/cd2021">40823112 repo</a> | <a href="https://a40823112.github.io/cd2021">40823112 site</a></p>
