--- a/config/content.htm
+++ b/config/content.htm
@@ -69,7 +69,10 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/3ptExMhNpG0" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/5VoL5xO_CE4" title="YouTube video player" width="560"></iframe></p>
 <h2>W14-15</h2>
-<h2>W16-17</h2>
+<p>由於先前的六腳獸行走即戰力還是不夠穩定，所以我們又修正了主體的設計，修正設計圖如下:</p>
+<p><img alt="" height="219" src="/images/八腳獸.jpg" width="334"/><img alt="" height="201" src="/images/八腳獸2.jpg" width="337"/></p>
+<p>模擬主體裝上鍵盤控制系統 : </p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/tmODY4ggWHU" title="YouTube video player" width="560"></iframe></p><h2>W16-17</h2>
 <h2>W18</h2>
 <h2>Task</h2>
 <h3>Task1</h3>
